# AI-Powered-Amazon-Product-Assistant

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROJECT_CANVAS.md  Project_Canvas.md  README.md  TESTING_RAGAS.md  docker-compose.yml  docker-entrypoint.sh  legacy_run_synthetic_evaluation.py  main.py  pyproject.toml  run_evaluation.py  run_ragas_evaluation.py  test_rag_system.py
data/chroma_db/34f4acb2-21b0-4b50-befb-2fb078b01f48/: index_metadata.pickle
data/processed/: README.md  dataset_summary.json
docs/: CHROMA.md  DASHBOARD_METRICS.md  DOCKER_TTY_FIXES.md  EVALUATIONS.md  GEMINI_MESSAGE_HANDLING.md  LOCAL_VS_DOCKER.md  PRODUCT_VISION.md  SPRINT_0.md  SPRINT_1.md  SYNTHETIC_DATA.md  USER_JOURNEY.md  WEAVE_TRACING_GUIDE.md
examples/: synthetic_data_examples.py
notebooks/: README.md  data_preprocessing.ipynb  data_visualization.ipynb  data_visualization_executed.ipynb  test.ipynb  verify_api_keys.ipynb
scripts/: generate_ragas_dataset.py  generate_simple_ragas_dataset.py
src/chatbot-ui/: streamlit_app.py
src/chatbot-ui/core/: config.py
src/evaluation/: __init__.py  dataset.py  evaluator.py  rag_adapter.py  ragas_evaluator.py  ragas_reporter.py  synthetic_data_generator.py
src/evaluation/legacy/: README.md  scorers.py
src/rag/: query_processor.py  vector_db.py  vector_db_docker.py
src/tracing/: business_intelligence.py  trace_utils.py
