[project]
name = "ai-powered-amazon-product-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "groq",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "openai",
    "pydantic",
    "pydantic-settings",
    "streamlit",
]
