[project]
name = "ai-powered-amazon-product-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai",
    "groq",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openai",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pydantic",
    "pydantic-settings",
    "seaborn>=0.13.2",
    "streamlit",
    "tqdm>=4.67.1",
    "weave>=0.51.54",
]
