[project]
name = "ai-powered-amazon-product-assistant"
version = "0.9.0"
description = "An end-to-end AI engineering project that builds an intelligent product recommendation and analysis system using Amazon Electronics dataset with RAG, multi-provider LLM support, and comprehensive tracing."
readme = "README.md"
authors = [
    {name = "Hendrik Reh", email = "hendrik.reh@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.5.23",
    "google-genai",
    "groq",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "ollama",
    "openai",
    "pandas>=2.3.0",
    "plotly>=6.2.0",
    "pydantic",
    "pydantic-settings",
    "seaborn>=0.13.2",
    "sentence-transformers>=3.0.0",
    "streamlit",
    "tqdm>=4.67.1",
    "weave>=0.51.54",
]
